# fk.todo

./: AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  RELEASING.md  RELEASING.zh-CN.md  REQUIREMENTS_PLAN.zh-CN.md  桌面级Todo工具需求文档.md
.github/workflows/: ci-build.yml  release.yml
scripts/: check-release-version.ps1
todo-tool/: AGENTS.md  PLAN_TODO.md  TESTCASES_UI_POLISH.md  UNFINISHED.md  package-lock.json  package.json  pnpm-lock.yaml
todo-tool/src/: App.css  App.tsx  api.ts  calendar.test.ts  calendar.ts  date.ts  events.ts  frontendLog.ts  i18n.tsx  logic.ts  main.tsx  platform.ts  reminder.ts  repeat.ts  reschedule.ts  sampleData.ts  scheduler.ts  search.test.ts  search.ts  shortcut.ts  snooze.ts  store.ts  tags.test.ts  tags.ts  theme.ts  timePresets.ts  types.ts  version.ts
todo-tool/src-tauri/: AGENTS.md  Cargo.toml  build.rs  tauri.conf.json
todo-tool/src-tauri/capabilities/: default.json  desktop.json
todo-tool/src-tauri/icons/: icon.icns
todo-tool/src-tauri/prompts/: ai_prompt.zh-CN.md
todo-tool/src-tauri/src/: ai.rs  commands.rs  events.rs  lib.rs  logging.rs  main.rs  models.rs  repeat.rs  scheduler.rs  state.rs  storage.rs  tray.rs  windows.rs
todo-tool/src-tauri/testcases/: README.md
todo-tool/src/components/: ConfirmDialog.tsx  ForcedReminderOverlay.tsx  IconButton.tsx  NotificationBanner.tsx  SettingsPanel.tsx  Switch.tsx  TaskCard.tsx  TaskComposer.tsx  TaskEditModal.tsx  ToastProvider.tsx  WindowTitlebar.tsx  icons.tsx  useConfirmDialog.tsx
todo-tool/src/views/: CalendarView.tsx  MainView.tsx  QuickView.tsx  SettingsView.tsx  TodayView.tsx  mainViewModel.test.ts  mainViewModel.ts
todo-tool/tests/: logic.test.ts  no-native-dialogs.test.ts
