[package]
name = "todo-tool"
version = "20260125.4.0"
description = "MustDo - pinned todo list with forced reminders"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "todo_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "todo-tool"
path = "src/main.rs"
test = false
required-features = ["app"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, optional = true , features = [] }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = { version = "2", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
tauri-plugin-process = { version = "2", optional = true }
sys-locale = "0.3"
log = "0.4"
flexi_logger = { version = "0.31.8", optional = true }

[dev-dependencies]
tempfile = "3"
chrono-tz = "0.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }

[features]
default = ["app"]
# Enable the full desktop runtime stack for the actual application build.
# Tests can run with `--no-default-features` to avoid pulling system GUI dependencies.
app = [
  "dep:tauri",
  "dep:tauri-plugin-notification",
  "dep:tauri-plugin-opener",
  "dep:tauri-plugin-dialog",
  "dep:tauri-plugin-process",
  "dep:tauri-plugin-global-shortcut",
  "dep:tauri-plugin-updater",
  "dep:reqwest",
  "dep:flexi_logger",
  "tauri/wry",
  "tauri/compression",
  "tauri/common-controls-v6",
  "tauri/dynamic-acl",
  "tauri/tray-icon",
  "tauri/x11",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
